# -

./: .gitattributes  .gitignore  A1激光雷达_ROS2_Jazzy_建图导航指南.md  AGENTS.md  DAILY_SUMMARY_20260531.md  DATABASE_DEPLOYMENT_COMPLETED.md  OPTIMIZATION_COMPLETION_REPORT.md  OPTIMIZATION_REPORT_20260531.md  PRODUCT.md  README.md  RK3588_ELF2_智能送药小车_Docker部署_Humble.md  RK3588_ELF2_智能送药小车_PC端Demo运行说明.md  RK3588_ELF2_智能送药小车_项目进展与后续开发计划.md  add_three_level_safety.py  ai_api.env.example  bench_gpu_vs_cpu.py  bench_qr_aruco.py  carto_apply_saved_pose.py  carto_finish_active_trajectories.py  carto_initialpose_once.py  carto_static_drift_check.py  chassis_bridge_mock.yaml  chassis_bridge_node.py  chassis_test_launcher.py  check_carto.sh  ctrl_flow2.py  dashscope_asr_file_test.py  delivery_database.py  diag_vision_once.sh  digital_circuit_guide_2026.txt  dmtx_hard_test.py  exp6_555_multisim_guide.md  experiment6.txt  fix_carto_tf.sh  fix_carto_timeout.sh  inspect_onnx_shapes.py  inspect_voice_runtime.sh  install_ollama_rk3588.sh  integrate_database_to_dashboard.py  nomachine_enable_nav2_drive.desktop  (+73 more)
board_sync/iflytek_asr_bridge/: CMakeLists.txt  Makefile  iflytek_asr_bridge.cpp  linuxrec.c  package.xml  speech_recognizer.c
board_sync/m2_voice_opt_20260609/: apply_on_board.py
board_sync/m2_voice_opt_20260609/medicine_robot_bringup/: package.xml
board_sync/m2_voice_opt_20260609/medicine_robot_bringup/launch/: pc_delivery_demo.launch.py
board_sync/medicine_vision_detector/: package.xml  setup.cfg  setup.py
board_sync/medicine_web_dashboard/: restart_dashboard_with_patient.sh  setup.py
configs/: README.md
configs/chassis/: chassis_bridge_ardupilot_readonly.yaml  chassis_bridge_ardupilot_serial_readonly.yaml  chassis_bridge_serial_template.yaml
configs/desktop/: enable_nav2_drive.desktop  (+3 more)
docs/: PROJECT_STRUCTURE.md
maps/: a1_handheld_map_latest.pgm  a1_handheld_map_latest.yaml
memories/: 0_codex_collaboration_memory_rules.md  10_manual_nav_test_points.md  1_chassis_and_ardupilot_bridge.md  2_rk3588_board_and_connection.md  3_medication_delivery_task_flow.md  4_lidar_mapping_and_localization.md  5_voice_m2_microphone_aikit.md  6_camera_npu_yolo_and_qr.md  7_real_navigation_web_dashboard.md  8_cartographer_relocalization_notes.md  9_terminal_command_pitfalls.md  README.md
patient_web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tools/: backup-rk3588-state.ps1  export-codex-cli-history.ps1  restore-rk3588-state.ps1
(+247 files in other folders)
