<?xml version="1.0"?>
<package format="3">
  <name>iflytek_asr_bridge</name>
  <version>0.1.0</version>
  <description>iFlytek offline ASR bridge for M2 microphone array.</description>
  <maintainer email="elf@example.com">elf</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
